<?xml version="1.0"?>
<package>
  <name>epson_imu_spi_driver</name>
  <version>1.2.0</version>
  <description>C++ Wrapper for ROS1 node of epson_imu_spi_driver package</description>

  <maintainer email="jkeller2@andrew.cmu.edu">John Keller</maintainer>
  <maintainer email="raymond.chow@ea.epson.com">Raymond Chow</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
